[gd_scene load_steps=8 format=3 uid="uid://06xv1a273y3p"]

[ext_resource type="Script" path="res://601. ShopUI/Scenes/resource_gui.gd" id="1_pajeb"]
[ext_resource type="Texture2D" uid="uid://1iv0v7e00v6j" path="res://100. Fishing and Fish/Assets/waterry.png" id="2_yhoyg"]
[ext_resource type="Texture2D" uid="uid://dwrrhgxyabgrj" path="res://601. ShopUI/Assets/shop assets/fish.png" id="3_aos0q"]
[ext_resource type="FontFile" uid="uid://chdqx1a3e1e2v" path="res://601. ShopUI/Assets/font/joystix.otf" id="4_atfy3"]
[ext_resource type="Texture2D" uid="uid://laraas5y2dt3" path="res://6022. Fishing and plastic status/Assets/trash.png" id="5_1rj7b"]
[ext_resource type="Texture2D" uid="uid://0l8d81yywyws" path="res://601. ShopUI/Assets/shop assets/money.png" id="6_1cotj"]
[ext_resource type="Texture2D" uid="uid://cspcjdd0miwk7" path="res://601. ShopUI/Assets/shop assets/time.png" id="7_r42ej"]

[node name="ResourceGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pajeb")

[node name="Waterry" type="Sprite2D" parent="."]
position = Vector2(706.5, -82.5)
scale = Vector2(0.602343, 0.0625)
texture = ExtResource("2_yhoyg")

[node name="Resources" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 269.0
offset_top = -106.0
offset_right = 1141.0
offset_bottom = -62.0
theme_override_constants/separation = 20
alignment = 1

[node name="FishContainer" type="HBoxContainer" parent="Resources"]
layout_mode = 2

[node name="FishIcon" type="TextureRect" parent="Resources/FishContainer"]
layout_mode = 2
texture = ExtResource("3_aos0q")
expand_mode = 3
flip_h = true

[node name="Fish" type="Label" parent="Resources/FishContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_atfy3")
theme_override_font_sizes/font_size = 20
text = "999"

[node name="PlasticContainer" type="HBoxContainer" parent="Resources"]
layout_mode = 2

[node name="PlasticIcon" type="TextureRect" parent="Resources/PlasticContainer"]
layout_mode = 2
texture = ExtResource("5_1rj7b")
expand_mode = 3
flip_h = true

[node name="Plastic" type="Label" parent="Resources/PlasticContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_atfy3")
theme_override_font_sizes/font_size = 20
text = "999"

[node name="MoneyContainer" type="HBoxContainer" parent="Resources"]
layout_mode = 2
theme_override_constants/separation = -7
alignment = 1

[node name="MoneyIcon" type="TextureRect" parent="Resources/MoneyContainer"]
layout_mode = 2
texture = ExtResource("6_1cotj")
expand_mode = 3

[node name="Money" type="Label" parent="Resources/MoneyContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_atfy3")
theme_override_font_sizes/font_size = 20
text = "$10000"
vertical_alignment = 1

[node name="TimeContainer" type="HBoxContainer" parent="Resources"]
layout_mode = 2

[node name="TimeIcon" type="TextureRect" parent="Resources/TimeContainer"]
layout_mode = 2
texture = ExtResource("7_r42ej")
expand_mode = 3

[node name="TimeDisplay" type="Label" parent="Resources/TimeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_atfy3")
theme_override_font_sizes/font_size = 20
text = "WEDNESDAY 12:12:12"
